syntax = "proto3";

package common.user.v1;

import "gorm/options.proto";
import "gorm/types.proto";
import "atlas/resource/v1/resource.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/zsmartex/zsmartex/proto/common/user/v1;userv1";

enum UserRole {
  USER_ROLE_MEMBER = 0;
  USER_ROLE_ADMIN = 1;
  USER_ROLE_SUPERADMIN = 2;
}

enum UserState {
  USER_STATE_PENDING = 0;
  USER_STATE_ACTIVE = 1;
  USER_STATE_DELETED = 2;
  USER_STATE_BANNED = 3;
  USER_STATE_LOCKED = 4;
}

message UserData {
  bool phone = 1;
  bool profile = 2;
  string referral_uid = 3 [json_name = "referral_uid"];
}

message User {
  option (gorm.opts) = {
    ormable: true,
    json: true
  };
  atlas.rpc.Identifier id = 1 [(gorm.field).tag = { type: 'bigint' primary_key: true auto_increment: true }];
  string uid = 2 [(gorm.field).tag = { index: "idx_users_on_uid" unique: true }];
  string username = 3 [(gorm.field).nilable = true, (gorm.field).tag = { index: "idx_users_on_username" unique: true }];
  bool otp = 4;
  UserRole role = 5;
  UserState state = 6;
  UserData data = 7;
  google.protobuf.Timestamp created_at = 8 [json_name = 'created_at'];
  google.protobuf.Timestamp updated_at = 9 [json_name = 'updated_at'];
}

message UserCredentials {
  option (gorm.opts) = {
    ormable: true,
    json: true
  };
  atlas.rpc.Identifier user_id = 1 [(gorm.field).tag = { type: 'bigint', index: 'idx_users_on_user_id' }];
  int64 value_index = 2 [(gorm.field).nilable = true];
  string value_encrypted = 3 [(gorm.field).nilable = true];
  enum Type {
    EMAIL = 0;
    PHONE = 2;
  }
  Type type = 4;
  google.protobuf.Timestamp created_at = 5 [json_name = 'created_at'];
  google.protobuf.Timestamp updated_at = 6 [json_name = 'updated_at'];
}